<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/detail" android:background="@color/background2" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/top_layout" />
    <RelativeLayout android:background="#ffeeeeee" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/orderId" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/order_id" style="@style/orderHeaderTotal" />
        <TextView android:id="@id/orderIdContent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/orderId" style="@style/orderHeader" />
        <TextView android:id="@id/orderStatus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/order_status" android:layout_below="@id/orderId" style="@style/orderHeaderTotal" />
        <TextView android:id="@id/orderStatusContent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/orderStatus" android:layout_below="@id/orderIdContent" style="@style/orderHeader" />
        <TextView android:id="@id/slotInfo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/delivery_details" android:layout_below="@id/orderStatus" style="@style/orderHeaderTotal" />
        <TextView android:id="@id/slotInfoContent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/slotInfo" android:layout_below="@id/orderStatusContent" style="@style/orderHeader" />
    </RelativeLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <ListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="fill_parent" android:drawSelectorOnTop="false" android:cacheColorHint="#00000000" />
    </FrameLayout>
    <TableLayout android:orientation="vertical" android:id="@id/moreInfoTable" android:background="#ffeeeeee" android:paddingBottom="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="1">
        <TableRow>
            <TextView android:id="@id/orderSubTotalQty" layout_column="1" style="@style/orderHeader" />
            <TextView android:gravity="right" android:id="@id/orderSubTotal" style="@style/orderHeader" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/delivery_fee" layout_column="1" style="@style/orderHeader" />
            <TextView android:gravity="right" android:id="@id/orderDeliveryFee" style="@style/orderHeader" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/tax" layout_column="1" style="@style/orderHeader" />
            <TextView android:gravity="right" android:id="@id/orderTax" style="@style/orderHeader" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/tip" layout_column="1" style="@style/orderHeader" />
            <TextView android:gravity="right" android:id="@id/orderTip" style="@style/orderHeader" />
        </TableRow>
        <View android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="1.0sp" android:layout_marginTop="2.0dip" />
        <TableRow>
            <TextView android:text="@string/total" layout_column="1" style="@style/orderHeaderTotal" />
            <TextView android:gravity="right" android:id="@id/orderTotal" style="@style/orderHeaderTotal" />
        </TableRow>
    </TableLayout>
</LinearLayout>
