<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/gateway_root" android:background="@color/background2" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/top_layout" />
    <Gallery android:id="@id/gallery" android:layout_width="fill_parent" android:layout_height="155.0dip" />
    <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:gravity="left" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <Button android:id="@id/home_btn_quicklist" android:text="@string/btn_quicklist" android:onClick="onQuicklistClick" style="@style/DashboardButton" />
                <Button android:textColor="#ff84ad21" android:id="@id/home_btn_past_purchases" android:text="@string/btn_past_purchases" android:onClick="onPPClick" style="@style/DashboardButton" />
                <Button android:id="@id/home_btn_delivery" android:text="@string/btn_delivery" android:onClick="onSlotSelectClick" style="@style/DashboardButton" />
                <Button android:id="@id/home_btn_best_produce" android:text="@string/btn_produce" android:onClick="onProduceClick" style="@style/DashboardButton" />
                <Button android:id="@id/home_btn_barcode" android:text="@string/btn_barcode" android:onClick="onBarcodeSearchClick" style="@style/DashboardButton" />
                <Button android:id="@id/home_btn_my_settings" android:text="@string/btn_my_settings" android:onClick="onMySettingsClick" style="@style/DashboardButton" />
                <LinearLayout android:id="@id/padding" android:layout_width="fill_parent" android:layout_height="50.0dip" />
            </LinearLayout>
        </ScrollView>
        <LinearLayout android:gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.demiroot.amazonfresh.ui.WrappingSlidingDrawer android:id="@id/drawer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:handle="@id/handle" android:content="@id/content">
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/handle" android:background="#ff333333" android:layout_width="fill_parent" android:layout_height="50.0dip">
                    <LinearLayout android:orientation="horizontal" android:id="@id/next_delivery_loading" android:layout_width="fill_parent" android:layout_height="fill_parent">
                        <ProgressBar android:paddingRight="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" />
                        <TextView android:textSize="@dimen/text_size_small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loading_next_delivery" />
                    </LinearLayout>
                    <TextView android:textSize="@dimen/text_size_large" android:textStyle="bold" android:textColor="@color/actionbar_title" android:gravity="center" android:id="@id/next_delivery_title" android:visibility="gone" android:duplicateParentState="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/content" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <View android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="1.0px" />
                    <LinearLayout android:orientation="vertical" android:id="@id/next_delivery_container" android:background="#ffeeeeee" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                </LinearLayout>
            </com.demiroot.amazonfresh.ui.WrappingSlidingDrawer>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
