<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/cartRootLayout" android:background="@color/background2" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/top_layout" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginTop="3.0dip" android:layout_marginRight="6.0dip">
        <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:id="@id/slotInfo" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textSize="14.0sp" android:textColor="#ffc81530" android:id="@id/slotWarn" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TableLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginBottom="4.0dip" android:stretchColumns="*">
            <TableRow>
                <Button android:textColor="#ff000000" android:gravity="center" android:id="@id/orderSelectSlotButton" android:padding="0.0px" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_margin="0.0px" android:text="@string/btn_change_delivery_time" android:layout_weight="1.0" />
                <Button android:enabled="false" android:textColor="#ff000000" android:gravity="center" android:id="@id/placeOrderButton" android:padding="0.0px" android:paddingLeft="3.0dip" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/btn_proceed_to_checkout" android:layout_weight="1.0" />
            </TableRow>
        </TableLayout>
        <View android:background="#ff99cc33" android:paddingTop="7.0dip" android:paddingBottom="2.0dip" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    </LinearLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <ListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="fill_parent" android:drawSelectorOnTop="false" android:cacheColorHint="#00000000" />
        <TextView android:id="@android:id/empty" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/empty_cart" style="@style/emptyCart" />
    </FrameLayout>
    <TableLayout android:id="@id/moreInfoTable" android:background="#ffeeeeee" android:paddingBottom="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="1">
        <TableRow>
            <TextView android:id="@id/orderSubTotalQty" android:layout_column="1" style="@style/orderHeader" />
            <TextView android:gravity="right" android:id="@id/orderSubTotal" style="@style/orderHeader" />
        </TableRow>
        <TableRow>
            <TextView android:layout_column="1" android:text="@string/delivery_fee" style="@style/orderHeader" />
            <TextView android:gravity="right" android:id="@id/orderDeliveryFee" style="@style/orderHeader" />
        </TableRow>
        <TableRow>
            <TextView android:layout_column="1" android:text="@string/tax" style="@style/orderHeader" />
            <TextView android:gravity="right" android:id="@id/orderTax" style="@style/orderHeader" />
        </TableRow>
        <TableRow>
            <TextView android:layout_column="1" android:text="@string/tip" style="@style/orderHeader" />
            <TextView android:gravity="right" android:id="@id/orderTip" style="@style/orderHeader" />
        </TableRow>
        <View android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="1.0sp" android:layout_marginTop="2.0dip" />
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_column="1" android:text="@string/total" style="@style/orderHeaderTotal" />
            <TextView android:layout_gravity="right" android:id="@id/orderTotal" style="@style/orderHeaderTotal" />
        </TableRow>
    </TableLayout>
</LinearLayout>
